--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "test:ui": "npx cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
